test/success/match/or_pattern/main.sk
module Main {


enum E {
    A,
    B,
    C
}

fn main () {
    let e = A;
    match e {
        A | B -> (),
        C -> ()
    }
}

}