test/errors/matchcompile/match_unnecessary_wildcard_for_enum/main.sk
module Main {

enum E {
    A,
    B,
    C
}

fn main() {
    let e = A;

    match e {
        A -> (),
        B -> (),
        C -> (),
        _ -> () // This wildcard is unnecessary because all variants are covered
    }
}

}